libstdc++-v3/include/bits/atomic_base.h
@@ -722,11 +722,11 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       bool
       is_lock_free() const noexcept
-      { return __atomic_is_lock_free(_M_type_size(1), &_M_p); }
+      { return __atomic_is_lock_free(sizeof(__pointer_type), &_M_p); }
 
       bool
       is_lock_free() const volatile noexcept
-      { return __atomic_is_lock_free(_M_type_size(1), &_M_p); }
+      { return __atomic_is_lock_free(sizeof(__pointer_type), &_M_p); }
 
       void
       store(__pointer_type __p,
